--- a/content/index.yml
+++ b/content/index.yml
@@ -1,4 +1,4 @@
-title: 'Nuxt UI Pro - Docs template!'
+title: 'Nuxt UI Pro - Docs template'
 description: Nuxt UI Pro is a collection of premium Vue components built on top of Nuxt UI to create beautiful & responsive Nuxt applications in minutes.
 navigation: false
 hero:
